--- a/style.css
+++ b/style.css
@@ -40,3 +40,9 @@ button {
 button:hover {
     background-color: #0056b3;
 }
+
+.independent-style {
+    color: purple;
+    font-weight: bold;
+    font-size: 18px;
+}
